@@ -1,26 +1,30 @@
 #!/bin/sh
 # Example for use of GNU gettext.
-# Copyright (C) 2003 Free Software Foundation, Inc.
+# Copyright (C) 2003-2004 Free Software Foundation, Inc.
 # This file is in the public domain.
 #
 # Script for regenerating all autogenerated files.
 
-kdedir=
-for d in /usr/lib/kde /usr/local/kde /usr/local /usr/kde /usr /opt/kde3 /opt/kde /suse/opt/kde3 $KDEDIR; do
-  if test -f $d/share/apps/kdelibs/admin/cvs.sh; then
-    kdedir=$d
-    break
-  fi
-done
-if test -z "$kdedir"; then
-  echo "*** KDE directory not found. Try setting KDEDIR." 1>&2
-  exit 1
-fi
+if test "$1" = fromscratch; then
 
-cp -a $kdedir/share/apps/kdelibs/admin .
-sed -e s/AC_FOREACH/INCOMPATIBLE_FOREACH/g < $kdedir/share/apps/kdelibs/admin/acinclude.m4.in > admin/acinclude.m4.in
-sed -e 's/automake\*1.6/automake\*1.[678]/' < admin/cvs.sh > admin/cvs.sh.new
-mv admin/cvs.sh.new admin/cvs.sh
+  kdedir=
+  for d in /usr/lib/kde /usr/local/kde /usr/local /usr/kde /usr /opt/kde3 /opt/kde /suse/opt/kde3 $KDEDIR; do
+    if test -f $d/share/apps/kdelibs/admin/cvs.sh; then
+      kdedir=$d
+      break
+    fi
+  done
+  if test -z "$kdedir"; then
+    echo "*** KDE directory not found. Try setting KDEDIR." 1>&2
+    exit 1
+  fi
+
+  cp -a $kdedir/share/apps/kdelibs/admin .
+  sed -e s/AC_FOREACH/INCOMPATIBLE_FOREACH/g < $kdedir/share/apps/kdelibs/admin/acinclude.m4.in > admin/acinclude.m4.in
+  sed -e 's/automake\*1.6/automake\*1.[678] | automake\*1.[678]/' < admin/cvs.sh > admin/cvs.sh.new
+  mv admin/cvs.sh.new admin/cvs.sh
+
+fi
 
 autopoint -f # was: gettextize -f -c
 mv config.rpath admin/config.rpath
